src/crode/test/invalid/invalidShapeRotation.crode
canvas "invalidShapeRotation" width 800 height 600 {
  let snowflake = circle {
    radius 5
    color black
  }

  draw snowflake at (100, 100) rotate snowflake
}
